# Babel

./: .gitignore  CMakeLists.txt  MacOSsetup.sh  Makefile  README.md  babel_client  babel_server  conanfile.txt  main.cpp
.github/workflows/: build.yml
Audio/: Exception.hpp  IAudio.hpp  PortAudio.cpp  PortAudio.hpp  PortAudioDevice.hpp  PortAudioInputDevice.hpp  PortAudioOutputDevice.hpp  PortAudioTypeChecker.hpp  build.sh  main.cpp
Serializer/: IEncoder.hpp
documentation/: Audio.iuml  BinaryProtocol.md  Network.iuml  Serializer.iuml  UML.md
include/: Exception.hpp  Tools.hpp  TypeChecker.hpp
include/Audio/: IAudio.hpp  PortAudio.hpp  PortAudioDevice.hpp  PortAudioInputDevice.hpp  PortAudioOutputDevice.hpp
include/Network/: ASIO.hpp  HeaderProtocol.hpp  INetwork.hpp  QtNetwork.cpp  QtNetwork.hpp  client.cpp  server.cpp  test.cpp
include/Network/TCP/: ServerTCP.cpp  ServerTCP.hpp  main_TCPServer_test.cpp
include/Network/UDP/: ASIO.cpp  ASIO.hpp
include/Serializer/: IEncoder.hpp  Opus.hpp
src/: client.cmake  main.cpp  maintest.cpp  server.cmake
src/Client/: CMakeLists.txt  Communication.cpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/Server/: CMakeLists.txt  main.cpp
